--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -27,7 +27,7 @@
   </li>
   <li class="nav-item">
     <a class="nav-link" data-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
-      <i class="icon-eye menu-icon"></i>
+      <i class="icon-bar-graph-2 menu-icon"></i>
       <span class="menu-title">Planificacion</span>
       <i class="menu-arrow"></i>
     </a>
@@ -41,13 +41,14 @@
   </li>
   <li class="nav-item">
     <a class="nav-link" data-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
-      <i class="icon-grid-2 menu-icon"></i>
-      <span class="menu-title">Tables</span>
+      <i class="icon-paper menu-icon"></i>
+      <span class="menu-title">Contabilidad</span>
       <i class="menu-arrow"></i>
     </a>
     <div class="collapse" id="tables">
       <ul class="nav flex-column sub-menu">
-        <li class="nav-item"> <a class="nav-link" href="pages/tables/basic-table.html">Basic table</a></li>
+        <li class="nav-item"> <a class="nav-link" href="#">Numeradores</a></li>
+        <li class="nav-item"> <a class="nav-link" href="#">Comprobantes</a></li>
       </ul>
     </div>
   </li>
