--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -48,7 +48,7 @@
     <div class="collapse" id="tables">
       <ul class="nav flex-column sub-menu">
         <li class="nav-item"> <a class="nav-link" href="#">Numeradores</a></li>
-        <li class="nav-item"> <a class="nav-link" href="#">Comprobantes</a></li>
+        <li class="nav-item"> <a class="nav-link" href="\07">Comprobantes</a></li>
       </ul>
     </div>
   </li>
