--- a/core/staticfiles/css/modal.css
+++ b/core/staticfiles/css/modal.css
@@ -1,4 +1,4 @@
-.modal {
+.inno-modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -13,7 +13,7 @@
 
 
   /* Modal Content/Box */
-.modal-content {
+.inno-modal-content {
     background-color: #771616;
     margin: 15% auto; /* 15% from the top and centered */
     margin-left: 20%;
@@ -22,15 +22,15 @@
     width: 70%; /* Could be more or less, depending on screen size */
   }
  /* The Close Button */
-.close {
+.inno-close {
   color: #aaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.inno-close:hover,
+.inno-close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
