--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -47,7 +47,7 @@
     </a>
     <div class="collapse" id="tables">
       <ul class="nav flex-column sub-menu">
-        <li class="nav-item"> <a class="nav-link" href="#">Numeradores</a></li>
+        <li class="nav-item"> <a class="nav-link" href="\06">Numeradores</a></li>
         <li class="nav-item"> <a class="nav-link" href="\07">Comprobantes</a></li>
       </ul>
     </div>
