--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -53,6 +53,18 @@
     </div>
   </li>
   <li class="nav-item">
+    <a class="nav-link" data-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
+      <i class="mdi mdi-home  menu-icon"></i>
+      <span class="menu-title">Stock</span>
+      <i class="menu-arrow"></i>
+    </a>
+    <div class="collapse" id="tables">
+      <ul class="nav flex-column sub-menu">
+        <li class="nav-item"> <a class="nav-link" href="\08">Depositos</a></li>
+        <li class="nav-item"> <a class="nav-link" href="\09">Gestion Stock</a></li>
+      </ul>
+    </div>
+  <li class="nav-item">
     <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
       <i class="icon-contract menu-icon"></i>
       <span class="menu-title">Icons</span>
