--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -36,6 +36,7 @@
         <li class="nav-item"> <a class="nav-link" href="\03">Costo de produccion</a></li>
         <li class="nav-item"> <a class="nav-link" href="\05">Planificacion</a></li>
         <li class="nav-item"> <a class="nav-link" href="\04">Campañas</a></li>
+        <li class="nav-item"> <a class="nav-link" href="\trazabilidad">Trazabilidad</a></li>
       </ul>
     </div>
   </li>
@@ -53,17 +54,18 @@
     </div>
   </li>
   <li class="nav-item">
-    <a class="nav-link" data-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
+    <a class="nav-link" data-toggle="collapse" href="#stock" aria-expanded="false" aria-controls="tables">
       <i class="mdi mdi-home  menu-icon"></i>
       <span class="menu-title">Stock</span>
       <i class="menu-arrow"></i>
     </a>
-    <div class="collapse" id="tables">
+    <div class="collapse" id="stock">
       <ul class="nav flex-column sub-menu">
         <li class="nav-item"> <a class="nav-link" href="\08">Depositos</a></li>
         <li class="nav-item"> <a class="nav-link" href="\09">Gestion Stock</a></li>
       </ul>
     </div>
+  </li>
   <li class="nav-item">
     <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
       <i class="icon-contract menu-icon"></i>
