--- a/core/templates/vista_trazabilidad.html
+++ b/core/templates/vista_trazabilidad.html
@@ -78,7 +78,7 @@
                 <label class="col-sm-3 col-form-label">Producto</label>
                 <div class="col-sm-9">
                   {{form.producto}}
-                  {{form.producto.erros}}
+                  {{form.producto.errors}}
                 </div>
               </div>
             </div>
@@ -87,7 +87,7 @@
                 <label class="col-sm-3 col-form-label">Especificacion</label>
                 <div class="col-sm-9">
                     {{form.espec}}
-                    {{form.espec.erros}}
+                    {{form.espec.errors}}
                   </div>
               </div>
             </div>
@@ -104,6 +104,19 @@
           </div>
           <div class="col-md-6">
             <div class="form-group row">
+              <label class="col-sm-3 col-form-label">UM</label>
+              <div class="col-sm-9">
+                {{form.unidad_medida}}
+                {{form.unidad_medida.errors}}
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group row">
               <label class="col-sm-3 col-form-label">Precio Unitario</label>
               <div class="col-sm-9">
                 {{form.precio_unitario}}
@@ -111,7 +124,16 @@
               </div>
             </div>
           </div>
+          <div class="col-md-6">
+            <div class="form-group row">
+              <label class="col-sm-3 col-form-label">Uso futuro</label>
+              <div class="col-sm-9">
+              </div>
+            </div>
+          </div>
         </div>
+
+
         <div class="row">
             <div class="col-md-6">
               <div class="form-group row">
@@ -204,9 +226,15 @@
   <script type="text/javascript">
     window.addEventListener('load', async() => {
       id_campo.addEventListener('change', async() => {
-        load_lotes();
+        load_lotes("{% url 'ajax_get_lote' %}", id_campo.value, id_lote_campo);
       });
-      load_lotes(id_lote_campo.value);
+      load_lotes("{% url 'ajax_get_lote' %}", id_campo.value, id_lote_campo, id_lote_campo.value);
+    });
+    window.addEventListener('load', async() => {
+      id_producto.addEventListener('change', async() => {
+        load_especificaciones("{% url 'ajax_get_espec' %}", id_producto.value, id_espec);
+      });
+      load_especificaciones("{% url 'ajax_get_espec' %}", id_producto.value, id_espec, id_espec.value);
     });
 </script>
 
@@ -220,6 +248,7 @@
 
 {% block custom_js %}
 <script src="{% static 'js/lotes.js' %}"></script>
+<script src="{% static 'js/especificaciones.js' %}"></script>
 {% endblock %}
 
 
