--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -67,6 +67,32 @@
     </div>
   </li>
   <li class="nav-item">
+    <a class="nav-link" data-toggle="collapse" href="#Maquinaria" aria-expanded="false" aria-controls="tables">
+      <i class=" mdi mdi-truck   menu-icon"></i>
+      <span class="menu-title">Maquinaria</span>
+      <i class="menu-arrow"></i>
+    </a>
+    <div class="collapse" id="Maquinaria">
+      <ul class="nav flex-column sub-menu">
+        <li class="nav-item"> <a class="nav-link" href="\08">Registro</a></li>
+        <li class="nav-item"> <a class="nav-link" href="\09">Mantenimeinto</a></li>
+      </ul>
+    </div>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="collapse" href="#Meteorologia" aria-expanded="false" aria-controls="tables">
+      <i class=" mdi mdi-weather-lightning  menu-icon"></i>
+      <span class="menu-title">Metereologia</span>
+      <i class="menu-arrow"></i>
+    </a>
+    <div class="collapse" id="Meteorologia">
+      <ul class="nav flex-column sub-menu">
+        <li class="nav-item"> <a class="nav-link" href="\08">Alertas</a></li>
+        <li class="nav-item"> <a class="nav-link" href="\09">Mapa Meteorologico</a></li>
+      </ul>
+    </div>
+  </li>
+  <li class="nav-item">
     <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
       <i class="icon-contract menu-icon"></i>
       <span class="menu-title">Icons</span>
